--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -10,7 +10,7 @@ spec:
       ports:
         - containerPort: 80
 
-    - name: my-container
+    - name: nginx
       image: nginx:latest
       ports:
         - containerPort: 80
