--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -7,6 +7,8 @@ metadata:
     app: nginx
     env: dta
     tier: web-tier
+  annotations:
+    special: special char and lengthy char can be used and defined. This are mainly used for external resource allocations.
 
 spec:
   containers:
