--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -14,6 +14,7 @@ spec:
   containers:
     - name: my-container
       image: nginx:latest
+      imagePullPolicy: Always
       ports:
         - containerPort: 80
       resources:
