--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -28,6 +28,13 @@ spec:
         - name: sample
           value: "hello"
 
+      volumeMounts: 
+        - name: config-volume
+          mountpath: /etc/config
+  volumes:
+    - name: config-voulme
+      ConfigMap:
+        name: my-config
 
     - name: sidecar
       image: busybox
