--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -33,7 +33,7 @@ spec:
           mountPath: /etc/config
   volumes:
     - name: config-volume
-      ConfigMap:
+      configMap:
         name: my-config
 
     - name: sidecar
