--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -35,8 +35,11 @@ spec:
 
     - name: sidecar
       image: busybox
-      command: ["/bin/sh", "-c", "while true; do wget -qO- http://localhost; sleep 5; done"]
-      
+      command: ["/bin/sh", "-c", "while true; do wget -qO- http://localhost; sleep 5; done"]    name: 
+      envFrom:
+        - configMapRef:
+            name: my-config-env
+
   volumes:
     - name: config-volume
       configMap:
