--- a/k8-resources/02-pod.yaml
+++ b/k8-resources/02-pod.yaml
@@ -35,7 +35,7 @@ spec:
 
     - name: sidecar
       image: busybox
-      command: ["/bin/sh", "-c", "while true; do wget -qO- http://localhost; sleep 5; done"]    name: 
+      command: ["/bin/sh", "-c", "while true; do wget -qO- http://localhost; sleep 5; done"]
       envFrom:
         - configMapRef:
             name: my-config-env
