--- a/k8-resources/secrets.yaml
+++ b/k8-resources/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secrets-test
+  namespace: roboshop
 data:
   username: "dmFtc2kwMTIyCg=="
   password: "TGVlbGFQcml5YUAxNDMK"
