--- a/Roboshop-K8-Microservices/web/roboshop.conf
+++ b/Roboshop-K8-Microservices/web/roboshop.conf
@@ -77,17 +77,17 @@ http {
         root   /usr/share/nginx/html;
     }
 
-    location /api/catalogue/ {
-        proxy_pass http://catalogue:8080/;
-    }
+    # location /api/catalogue/ {
+    #     proxy_pass http://catalogue:8080/;
+    # }
 
-    location /api/user/ {
-        proxy_pass http://user:8080/;
-    }
+    # location /api/user/ {
+    #     proxy_pass http://user:8080/;
+    # }
 
-    location /api/cart/ {
-        proxy_pass http://cart:8080/;
-    }
+    # location /api/cart/ {
+    #     proxy_pass http://cart:8080/;
+    # }
 
     # location /api/shipping/ {
     #     proxy_pass http://shipping:8080/;
