--- a/Roboshop-K8-Microservices/web/Dockerfile
+++ b/Roboshop-K8-Microservices/web/Dockerfile
@@ -3,4 +3,4 @@ RUN rm -rf /usr/share/nginx/html/index.html
 RUN rm -rf /etc/nginx/nginx.conf
 RUN rm -rf /etc/nginx/conf.d/default.conf
 COPY roboshop.conf /etc/nginx/nginx.conf
-ADD static usr/share/nginx/html/
+ADD static /usr/share/nginx/html/
