--- a/k8-eksctl/kubernetes-eksctl/eks.yaml
+++ b/k8-eksctl/kubernetes-eksctl/eks.yaml
@@ -11,7 +11,8 @@ managedNodeGroups: # this is also completely managed by AWS
     # your K8 node can be anytime taken back by AWS
     spot: true
     availabilityZones: # ebs static provisioning
-    - us-east-1b
+    - us-east-1f
+    - us-east-1e
     desiredCapacity: 2
     ssh:
       publicKeyName: kubernetes # replace this with your keypair exists in AWS.
