--- a/Roboshop-K8-Microservices/user/Dockerfile
+++ b/Roboshop-K8-Microservices/user/Dockerfile
@@ -1,8 +1,7 @@
-FROM node:14.21.3-alpine3.17
+FROM node:14
 EXPOSE 8080
 WORKDIR /opt/server
 COPY package.json .
 COPY server.js .
 RUN npm install
-ENV MONGO=true
 CMD ["node", "server.js"]
